[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "TracerLL"
version = "0.2.6"
description = "TracerLL: High-performance embedded variable tracing library"
authors = [
    { name = "Jos Wigchert", email = "joswigchert@integralmotions.com" },
    { name = "William Kers", email = "williamkers@integralmotions.com" },
]
readme = "README.md"
license = { text = "MIT" }
dependencies = []
requires-python = ">=3.9"

[tool.cibuildwheel]
skip = "cp36-* cp37-* cp38-* pp*"
archs = "auto"
